fix overflow from html

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,5 +1,5 @@
 html {
-	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 .pointer {
